fix column overflow in safari (safari flex-basis bug)

--- a/lms/static/sass/page-builder/layouts/_layouts-base.scss
+++ b/lms/static/sass/page-builder/layouts/_layouts-base.scss
@@ -9,5 +9,7 @@
 
   &__column {
     padding: 0 1.5rem;
+    flex: 1 1 1rem;
+    -webkit-flex: 1 1 1rem;
   }
 }
